--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
     "next": "16.0.10",
+    "pdfjs-dist": "5.4.296",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-pdf": "^10.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
